--- a/index.html
+++ b/index.html
@@ -659,23 +659,23 @@
                 <div class="box w-50 h-60 box-b-l box-b-r">
                     <div class="f18">Major Midwest US Energy Company - Exelon Corporation</div>
                     <div class="f14">March 2009 – October 2009</div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         Architected and led the development of a Site Ownership web part to gather site information from site administrators across SharePoint sites into a Central site directory.  This solution was implemented as a web part written utilizing Visual Studio 2008 and C#, and utilized the SharePoint Object Model to create a dynamic Site Ownership form from a view defined in the SharePoint site directory list - this allowed for dynamic creation of a form that displays any fields an administrator chooses to expose.  The web part also utilizes the SharePoint object model to allow for editing of the Site Directory from external SharePoint sites with no additional security needing to be applied.
                     </div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         Designed and constructed an Advanced Query solution that used the SharePoint Search object model to query against an Oracle database that utilized Business Data Services for its indexing.  The solution was implemented as a web part built with Microsoft .NET, AJAX and JavaScript to provide for an enhanced user experience, and displayed the returned results in a SharePoint ‘SPGridView, that provided for real time sorting and paging.  the Web Part was written utilizing Visual Studio 2008 and C#.
                     </div>
                 </div>
                 <div class="box w-25 h-60 box-b-l box-b-r">
                     <div class="f18">Midwest US Tool Manufacturer</div>
                     <div class="f14">October 2008 – March 2009</div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         SharePoint 2007, Visual Studio 2008, Microsoft .NET Framework 3.5, C#
                     </div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                     </div>
                 </div>
-                <div class="box w-25 h-60 box-b-l box-b-r title-top">
+                <div class="box w-25 h-60 box-b-l box-b-r">
                     <div class="f18">Argonne National Lab</div>
                     <div class="f14">March 2008 – October 2008</div>
                     <div class="f16 myBody">
@@ -689,20 +689,20 @@
                 <div class="box w-60 h-40 box-b-l box-b-r">
                     <div class="f18">Midwest US Microsoft Solution Partner</div>
                     <div class="f14">October 2007 – March 2008</div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         Designed and implemented a Microsoft Office SharePoint Server (MOSS)-based custom internet-facing site. The site contains customized master pages, utilizes MOSS Web Content Management pages with custom-built page layouts, contains custom-built C# Web Parts, and utilizes MOSS Excel Services and the Business Data Catalog.  A custom authentication provider that accesses the clients Microsoft Dynamics CRM 4.0 Contact entity was also developed for the site..
                     </div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         SharePoint 2007, Visual Studio 2005, Microsoft .NET Framework 3.0, C#
                     </div>
                 </div>
-                <div class="box w-40 h-40 box-b-l box-b-r title-top">
+                <div class="box w-40 h-40 box-b-l box-b-r">
                     <div class="f18">Midwest US Logistics Firm</div>
                     <div class="f14">May 2007 – October 2007</div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         Architected and implemented custom authentication in a SharePoint/MOSS solution for a Chicago-based logistics firm. The implementation provided for the creation of a custom ASP.NET Forms Authentication Provider that retrieved credentials from a database hosted on an AS 400 platform.
                     </div>
-                    <div class="f16 myBody">
+                    <div class="f14 myBody">
                         SharePoint 2007, Visual Studio 2005, Microsoft .NET Framework 3.0, C#
                     </div>
                 </div>
