--- a/index.html
+++ b/index.html
@@ -457,8 +457,6 @@
                         <div style="width:200px;color: white;text-align:center;">use QR code to scan</div>
                         <div style="width: 200px; color: white; text-align: center;">to phone or iPad</div>
                     </div>
-
-
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
                 <div class="f-cover-flip f24">&lt; Flip The Page</div>
@@ -471,36 +469,56 @@
                     <h2>Projects at Hitachi Consulting</h2>
                     <a>Previous Projects</a>
                 </div>
-                <div class="box w-100 h-50 box-b-l box-b-r box-img-left" id="buttonMobile">
+                <div class="box w-100 h-100 box-b-l box-b-r box-img-left" id="buttonMobile">
                     <div class="img-cont" back="mobile" style="cursor:default;background-image: url(resources/images/mobile.png); "></div>
-                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
-                    <div class="f16">Senior HTML5/Mobile Architect - April 2013 to present</div>
-                    <div class="f16 myBody">
+                    <div class="f22">Large Oil and Gas Provider - Houston, TX</div>
+                    <div class="f20">Senior HTML5/Mobile Architect - April 2013 to present</div>
+                    <div class="f20 myBody">
                         Architected and implemented a project management mobile web application.
                     </div>
-                    <div class="f16 myBody">
+                    <div class="f20 myBody">
                         Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, tasks, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>), Continuous Integration (internal tool)
                         <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/touch/">Sencha Touch 2.3</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a>, <a target="_blank" class="lnk" href="http://phonegap.com/">PhoneGap</a>
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
-                        <br /><br /><span id="qrcodeMobile"></span>use QR code to scan to phone or iPad
                     </div>
-                </div>
-
-                <div class="box w-100 h-50 box-b-l box-b-r box-img-right" id="buttonEMSPEED12">
-                    <div class="img-cont" back="EMSPEED12" style="cursor: default; background-image: url(resources/images/EMSPEED12.png); "></div>
-                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
-                    <div class="f16">Senior HTML5 Architect - June 2012 to present</div>
-                    <div class="f16 myBody">
-                        Architected and implemented a Web-based project management.  Built as a 100% browser-based 'Single Page Application' with HTML5, JavaScript, AJAX and CSS3.
-                    </div>
-                    <div class="f16 myBody">
-                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>)
-                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
-                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft WCF</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server</a>
-                        <br /><br /><span id="qrcodeEMSPEED12"></span>use QR code to scan to phone or iPad
+                    <div class="f20 myBody">
+                        <div id="qrcodeMobile"></div>
+                        <div class="f16">use QR code to scan to phone or iPad</div>
                     </div>
                 </div>
             </div>
+
+
+            <!--p1-->
+            <div class="f-page">
+                <div class="f-title">
+                    <a>Marc Gusmano</a>
+                    <h2>Projects at Hitachi Consulting</h2>
+                    <a>Previous Projects</a>
+                </div>
+                <div class="box w-100 h-100 box-b-l box-b-r box-img-right" id="buttonEMSPEED12">
+                    <div class="img-cont" back="EMSPEED12" style="cursor: default; background-image: url(resources/images/EMSPEED12.png); "></div>
+                    <div class="f22">Large Oil and Gas Provider - Houston, TX</div>
+                    <div class="f20">Senior HTML5 Architect - June 2012 to present</div>
+                    <div class="f20 myBody">
+                        Architected and implemented a Web-based project management.  Built as a 100% browser-based 'Single Page Application' with HTML5, JavaScript, AJAX and CSS3.
+                    </div>
+                    <div class="f20 myBody">
+                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>)
+                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft WCF</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server</a>
+                    </div>
+                    <div class="f20 myBody">
+                        <div id="qrcodeEMSPEED12"></div>
+                        <div class="f16">use QR code to scan to phone or iPad</div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
 
             <!--p2-->
             <div class="f-page">
