--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                     <h1 class="f18">to flip pages</h1>
                     <div>
                         <div id="qrcode"></div>
-                        <div style="width:200px;color: white;text-align:center;">use QR code to scan</div>
-                        <div style="width: 200px; color: white; text-align: center;">to phone or iPad</div>
+                        <div class="f12" style="width:200px;color: white;text-align:center;">use QR code to scan</div>
+                        <div class="f12" style="width: 200px; color: white; text-align: center;">to phone or iPad</div>
                     </div>
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
@@ -483,7 +483,7 @@
                     </div>
                     <div class="f20 myBody">
                         <div id="qrcodeMobile"></div>
-                        <div class="f16">use QR code to scan to phone or iPad</div>
+                        <div class="f12">use QR code to scan to phone or iPad</div>
                     </div>
                 </div>
             </div>
@@ -510,15 +510,10 @@
                     </div>
                     <div class="f20 myBody">
                         <div id="qrcodeEMSPEED12"></div>
-                        <div class="f16">use QR code to scan to phone or iPad</div>
+                        <div class="f12">use QR code to scan to phone or iPad</div>
                     </div>
                 </div>
             </div>
-
-
-
-
-
 
             <!--p2-->
             <div class="f-page">
@@ -540,10 +535,10 @@
 
                     </div>
                     <div class="f16 myBody">
-                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, AngularJS 1.2.1 (Data Binding, Controller), Modernizr (CSS 3D Transforms and Transitions), JavaScript, CSS/SASS, Windows Azure Hosting
+                        HTML5, Sencha Touch 2.3, JQuery 1.10.2, AngularJS 1.2.1 (Data Binding, Controller), Modernizr (CSS 3D Transforms and Transitions), JavaScript, CSS/SASS, Windows Azure Hosting
                     </div>
                     <div class="f16 myBody">
-                        JQuery plugins: MockJax (AJAX Mocking), jquery.flips, TouchSwipe
+                        JQuery plugins: MockJax (AJAX Mocking), jquery.flips, TouchSwipe, jQuery.qrcode
                     </div>
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
