--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server</a>
                     </div>
                     <div class="f20 myBody">
-                        <div id="qrcodeMobile"></div>
+                        <div style="margin:10px 0px 10px 0px;" id="qrcodeMobile"></div>
                         <div class="f12">use QR code to scan to phone or iPad</div>
                     </div>
                 </div>
@@ -509,7 +509,7 @@
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft WCF</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server</a>
                     </div>
                     <div class="f20 myBody">
-                        <div id="qrcodeEMSPEED12"></div>
+                        <div style="margin:10px 0px 10px 0px;" id="qrcodeEMSPEED12"></div>
                         <div class="f12">use QR code to scan to phone or iPad</div>
                     </div>
                 </div>
