--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <div class="f22">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f20">Senior HTML5/Mobile Architect - April 2013 to present</div>
                     <div class="f20 myBody">
-                        Architected and implemented a project management mobile web application.
+                        Architected and implemented a project management mobile web application. Included initial effort to implement for responsive design (from mobile to desktop).
                     </div>
                     <div class="f18 myBody">
                         Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, tasks, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>), Continuous Integration (internal tool)
